fixing spacing, commenting out breaking styles

--- a/site/default/static/styles/template.less
+++ b/site/default/static/styles/template.less
@@ -186,7 +186,7 @@ footer {
 		display: inline-block;
 	}
 	.brand {
-		background-image: url(@logoFooter);
+		/*background-image: url(@logoFooter);*/
 		/* text-indent: -9999px!important; */
 		/* margin-top: 13px; */
 		line-height: @footerHeight/2+7;
